feat(rules): implement CORS security rules (SCG003, SCG004, SCG005) and URI loopback validation
Implement a comprehensive suite of static analysis rules to detect insecure CORS configurations in Spring MVC and Spring Actuator properties. To ensure clean separation of concerns (SRP), CORS checks are split into three dedicated rules. All rule messages, Javadocs, code comments, and test metadata (@DisplayName and method names) are authored in English.

- Add CorsWildcardWithCredentialsRule (SCG003, Severity: HIGH): Detects dangerous combinations of wildcard origins/patterns (allowed-origins / allowed-origin-patterns = '*') combined with credentials enabled (allow-credentials = true). Handles YAML indexed lists, origin wildcard patterns, relaxed property bindings, and environment placeholders.
- Add CorsInsecureProtocolsRule (SCG004, Severity: MEDIUM): Flags allowed origins using unencrypted 'http://' protocols when running in non-safe profiles (!SafeProfileClassifier). Integrates a robust RFC 1122 and RFC 6761 compliant loopback check via java.net.URI parsing to prevent subdomain bypasses (e.g., http://localhost.attacker.com) while safely exempting valid local origins (127.0.0.0/8, [::1], .localhost, .local). Captures IllegalArgumentException to enforce a fail-closed posture for malformed URIs.
- Add CorsPermissiveMethodsAndHeadersRule (SCG005, Severity: MEDIUM/LOW): Detects wildcard HTTP methods (allowed-methods = '*') and flags dangerous exposed headers (exposed-headers containing Authorization, Set-Cookie, Cookie, or X-Auth-Token at MEDIUM severity, or '*' at LOW severity).
- Refactor codebase for internationalization: Standardized all inline comments, Javadocs, string templates, test method identifiers, and JUnit 5 @DisplayName annotations strictly to English across all rule implementations and test suites.

Tests: Added comprehensive unit test suites (CorsWildcardWithCredentialsRuleTest, CorsInsecureProtocolsRuleTest, and CorsPermissiveMethodsAndHeadersRuleTest) c